--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-infra/.terraform*
-infra/terraform.tfstate
-infra/terraform.tfstate.backup
-node_modules/
-dist/
-
+# --- Terraform (IaC) ---
+*.tfstate
+*.tfstate.*
+.terraform/
+.terraform.lock.hcl
